# SpreadsheetQtWidget

./: CMakeLists.txt  Cell.cpp  Cell.h  Maximum.cpp  Maximum.h  Mean.cpp  Mean.h  Minimum.cpp  Minimum.h  Observer.h  Operation.cpp  Operation.h  README.md  Subject.h  Sum.cpp  Sum.h  main.cpp
Test/: CMakeLists.txt  Tests.cpp
